using huggingface datasets to accelerate training, using open-llama to pretrain

--- a/configs/pretrain_config.yaml
+++ b/configs/pretrain_config.yaml
@@ -1,9 +1,13 @@
 data:
-  patterns: ["data/pretrain_data/part-*.jsonl.zst"]
-  tokenizer_model_path: "configs/10w_vocab_wudao5_pile10.model"
+  mode: "pretrain"
+  data: 
+    mixed: "data/pretrain_data/part-*.jsonl.zst"
+  concat_multiple_sequence: True
+  num_sequences: 10
+  seq_length: 2048
+  tokenizer_model_path: "configs/llama_tokenizer_extended.model"
 model:
   initializer_range: 1.0e-2
-  max_length: 1024
   hidden_dropout_prob: 0.1
   attention_dropout_prob: 0.1
   use_stable_embedding: True
@@ -16,6 +20,7 @@ train:
   lr: 2.0e-4
   weight_decay: 1.0e-1
   ckpt: null
+  train_num_workers: 16
 # global step
 log_interval: 5
 eval_interval: 200
