--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,4 @@ triton
 functorch==1.13.1
 xformers
 gradio
-git+https://github.com/Bayes-Song/transformers.git
+git+https://github.com/s-JoL/transformers.git@dev
