--- a/configs/pretrain_config.yaml
+++ b/configs/pretrain_config.yaml
@@ -3,9 +3,9 @@ data:
   data: 
     mixed: "data/pretrain_data/part-*.jsonl.zst"
   pad_to_max: False
-  sequence_sample_mode: "sample"
+  sequence_sample_mode: "none"
   concat_multiple_sequence: True
-  num_sequences: 20
+  num_sequences: 10
   seq_length: 2048
   tokenizer_model_path: "configs/llama_tokenizer_extended.model"
 model:
@@ -24,6 +24,7 @@ train:
   ckpt: "data/llama_raw_ckpt/7B/extended.pth"
   train_num_workers: 16
   gradient_accumulation_steps: 12
+  prefetch_factor: 100
 # global step
 log_interval: 5
 eval_interval: 200
