add xP3 dataset and belle_2M

--- a/configs/instruct_config.yaml
+++ b/configs/instruct_config.yaml
@@ -26,6 +26,7 @@ train:
   train_num_workers: 16
   gradient_accumulation_steps: 1
   prefetch_factor: 100
+  train_and_eval: False
 # global step
 log_interval: 50
 eval_interval: 500
