--- a/configs/pretrain_config.yaml
+++ b/configs/pretrain_config.yaml
@@ -28,6 +28,7 @@ train:
   train_num_workers: 16
   gradient_accumulation_steps: 12
   prefetch_factor: 100
+  train_and_eval: True
 # global step
 log_interval: 5
 eval_interval: 500
