--- a/configs/instruct_config.yaml
+++ b/configs/instruct_config.yaml
@@ -7,13 +7,8 @@ data:
   concat_multiple_sequence: True
   num_sequences: 50
   seq_length: 2048
-  tokenizer_model_path: "configs/llama_tokenizer_extended.model"
-model:
-  initializer_range: 1.0e-2
-  hidden_dropout_prob: 0.1
-  attention_dropout_prob: 0.1
-  use_stable_embedding: False
-  shared_input_output_embedding: False
+  tokenizer_model_path: "configs/tokenizer_models/llama_tokenizer_extended.model"
+  split_by_shard: False
 train:
   train_batch_size: 2
   # 1B token for 1 epoch, 5epoch
@@ -27,6 +22,7 @@ train:
   gradient_accumulation_steps: 1
   prefetch_factor: 100
   train_and_eval: False
+  gradient_checkpointing_enable: False
 # global step
 log_interval: 50
 eval_interval: 500
